@@ -1,3 +1,7 @@
+2007-03-08  Guillem Jover  <guillem.jover@nokia.com>
+
+	* launcher/booster_api.h: When included from C++ declare as extern C.
+
 2007-03-08  Johannes Schmid <johannes.schmid@openismus.com>,
 	    Guillem Jover  <guillem.jover@nokia.com>
 
